--- a/pages/master.html
+++ b/pages/master.html
@@ -66,8 +66,7 @@
 				новых обра&shy;зова&shy;тель&shy;ных тех&shy;но&shy;логий этого же учеб&shy;ного заве&shy;дения. От себя лично выра&shy;жаю глубо&shy;кую благо&shy;дар&shy;ность всем, кто
 				при&shy;ни&shy;мал учас&shy;тие в этой много&shy;лет&shy;ней работе и помог мне воп&shy;ло&shy;тить в жизнь мно&shy;гие идеи, кото&shy;рые воз&shy;можно так бы и оста&shy;лись
 				иде&shy;ями без под&shy;держки реаль&shy;ных специ&shy;алис&shy;тов-прак&shy;тиков в об&shy;ласти РКИ. Вместе с этим я рад что в свою оче&shy;редь смог помочь актив&shy;ным
-				пред&shy;стави&shy;телям педа&shy;гоги&shy;чес&shy;кого коллек&shy;тива реали&shy;зо&shy;вать соб&shy;ствен&shy;ные идеи и под&shy;ходы в повы&shy;шении эффек&shy;тив&shy;ности
-				учеб&shy;ного про&shy;цес&shy;са при по&shy;мощи соз&shy;дан&shy;ных мною прог&shy;рам&shy;мных инс&shy;тру&shy;мен&shy;тов.</p>
+				пред&shy;стави&shy;телям педа&shy;гоги&shy;чес&shy;кого коллек&shy;тива реали&shy;зо&shy;вать соб&shy;ствен&shy;ные мето&shy;дичес&shy;кие реше&shy;ния с по&shy;мощью соз&shy;дан&shy;ных мною прог&shy;рам&shy;мных инс&shy;тру&shy;мен&shy;тов.</p>
 
 			<p>Чтобы перейти к прос&shy;мотру пре&shy;зен&shy;тации нажмите кно&shy;пку под этим тек&shy;стом или
 				вос&shy;поль&shy;зуйтесь орга&shy;нами
