--- a/pages/page-02.html
+++ b/pages/page-02.html
@@ -55,7 +55,7 @@
 			им подобные.
 		</p>
 
-		<h4>На практике Интерак&shy;тив&shy;ная биб&shy;лио&shy;тека ИМО ВГУ ис&shy;поль&shy;зует&shy;ся в двух
+		<h4>На практике «Интерак&shy;тив&shy;ная биб&shy;лио&shy;тека» ис&shy;поль&shy;зует&shy;ся в двух
 			ос&shy;нов&shy;ных сце&shy;на&shy;риях:</h4>
 
 		<div class="mt-4 mb-2 divider-horz"></div>
