--- a/pages/master.html
+++ b/pages/master.html
@@ -73,7 +73,7 @@
 				управ&shy;ления навига&shy;цион&shy;ной па&shy;нели (внизу страницы).
 			</p>
 
-			<p class="text-right font-italic">Черкасов Григорий Вячеславович (2017&nbsp;г.).</p>
+			<p class="text-right font-italic">Черкасов Григорий Вячеславович (2017&nbsp;г.)</p>
 
 		</div>
 
