--- a/pages/master.html
+++ b/pages/master.html
@@ -66,7 +66,8 @@
 				новых обра&shy;зова&shy;тель&shy;ных тех&shy;но&shy;логий этого же учеб&shy;ного заве&shy;дения. От себя лично выра&shy;жаю глубо&shy;кую благо&shy;дар&shy;ность всем, кто
 				при&shy;ни&shy;мал учас&shy;тие в этой много&shy;лет&shy;ней работе и помог мне воп&shy;ло&shy;тить в жизнь мно&shy;гие идеи, кото&shy;рые воз&shy;можно так бы и оста&shy;лись
 				иде&shy;ями без под&shy;держки реаль&shy;ных специ&shy;алис&shy;тов-прак&shy;тиков в об&shy;ласти РКИ. Вместе с этим я рад что в свою оче&shy;редь смог помочь актив&shy;ным
-				пред&shy;стави&shy;телям педа&shy;гоги&shy;чес&shy;кого коллек&shy;тива реали&shy;зо&shy;вать соб&shy;ствен&shy;ные мето&shy;дичес&shy;кие реше&shy;ния с по&shy;мощью соз&shy;дан&shy;ных мною прог&shy;рам&shy;мных инс&shy;тру&shy;мен&shy;тов.</p>
+				пред&shy;стави&shy;телям педа&shy;гоги&shy;чес&shy;кого коллек&shy;тива реали&shy;зо&shy;вать соб&shy;ствен&shy;ные мето&shy;дичес&shy;кие реше&shy;ния с по&shy;мощью
+				соз&shy;дан&shy;ных мною прог&shy;рам&shy;мных инс&shy;тру&shy;мен&shy;тов.</p>
 
 			<p>Чтобы перейти к прос&shy;мотру пре&shy;зен&shy;тации нажмите кно&shy;пку под этим тек&shy;стом или
 				вос&shy;поль&shy;зуйтесь орга&shy;нами
@@ -153,8 +154,7 @@
 					физико-хими&shy;чес&shy;ких про&shy;цес&shy;сов,
 					про&shy;те&shy;каю&shy;щих в его орга&shy;низме.</p>
 				<p class="text-justify">Другое дело, суметь боль&shy;шой объ&shy;ём рыхлой,
-					неа&shy;дап&shy;ти&shy;рован&shy;ной ин&shy;фор&shy;ма&shy;ции,
-					систе&shy;мати&shy;зи&shy;ро&shy;вать, струк&shy;ту&shy;ри&shy;ро&shy;вать и по&shy;дать в ТАКОМ
+					неа&shy;дап&shy;ти&shy;рован&shy;ной ин&shy;фор&shy;ма&shy;ции: систе&shy;мати&shy;зи&shy;ро&shy;вать, струк&shy;ту&shy;ри&shy;ро&shy;вать и по&shy;дать в ТАКОМ
 					ВИДЕ, в кото&shy;ром уча&shy;щийся
 					смо&shy;жет её лег&shy;ко и проч&shy;но ус&shy;во&shy;ить с мини&shy;маль&shy;ными
 					зат&shy;ра&shy;та&shy;ми вре&shy;мени. Т.е. фак&shy;ти&shy;чес&shy;ки
