--- a/pages/master.html
+++ b/pages/master.html
@@ -153,8 +153,7 @@
 					частью нерв&shy;ной сис&shy;темы чело&shy;века в виде нейрон&shy;ных связей и
 					физико-хими&shy;чес&shy;ких про&shy;цес&shy;сов,
 					про&shy;те&shy;каю&shy;щих в его орга&shy;низме.</p>
-				<p class="text-justify">Другое дело, суметь боль&shy;шой объ&shy;ём рыхлой,
-					неа&shy;дап&shy;ти&shy;рован&shy;ной ин&shy;фор&shy;ма&shy;ции: систе&shy;мати&shy;зи&shy;ро&shy;вать, струк&shy;ту&shy;ри&shy;ро&shy;вать и по&shy;дать в ТАКОМ
+				<p class="text-justify">Другое дело — суметь боль&shy;шой объ&shy;ём гро&shy;мозд&shy;кой, слабо&shy;связан&shy;ной ин&shy;фор&shy;ма&shy;ции: систе&shy;мати&shy;зи&shy;ро&shy;вать, струк&shy;ту&shy;ри&shy;ро&shy;вать и по&shy;дать в ТАКОМ
 					ВИДЕ, в кото&shy;ром уча&shy;щийся
 					смо&shy;жет её лег&shy;ко и проч&shy;но ус&shy;во&shy;ить с мини&shy;маль&shy;ными
 					зат&shy;ра&shy;та&shy;ми вре&shy;мени. Т.е. фак&shy;ти&shy;чес&shy;ки
